# RL-Balance

./: .gitignore  README.md  balanceEnv.py  car.urdf  main.py  model.py  pyproject.toml  robotEnv.py  test.py  test_env.py  train.py
urdf/: brushlessfixboard.STL  brushlessfixshelf.STL  brushlessmotor.STL  brushmotor.STL  car.urdf  desktop.ini  encoder.STL  falan.STL  fixboard.STL  flywheel.STL  flywheelprotection.STL  selfboard.STL  wheel.STL
