[project]
name = "test-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=1.1.1",
    "matplotlib>=3.10.3",
    "pybullet>=3.2.7",
    "torch==2.7.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
